--- a/src/app/components/private/shared/dashboard/dashboard.component.html
+++ b/src/app/components/private/shared/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div id="wrapper">
 
     <!-- Sidebar -->
-    <app-sidebar style="height: 100%;"></app-sidebar>
+    <app-sidebar></app-sidebar>
     <!-- End of Sidebar -->
 
     <!-- Content Wrapper -->
