--- a/src/app/components/private/admin/category/category-add/category-add.component.html
+++ b/src/app/components/private/admin/category/category-add/category-add.component.html
@@ -30,11 +30,15 @@
                     </div>
 
                     <div class="card-body">
-                        <form>
+                        <form [formGroup]="addCategoryForm" (ngSubmit)="addCategory()">
                             <div class="form-group">
                                 <label for="name" id="name">Name : </label>
-                                <input type="text" class="form-control form-control-sm">
-                                <button class="btn btn-sm btn-primary mt-3">Add</button>
+                                <input type="text" class="form-control form-control-sm" formControlName="categoryName" [ngClass]="{'is-invalid' : categoryName?.touched && categoryName?.invalid, 'is-valid' : categoryName?.touched && !categoryName?.invalid}">
+                                <div *ngIf="categoryName?.touched && categoryName?.invalid">
+                                    <small *ngIf="categoryName?.errors?.required" class="text-danger">*Category name is required<br></small>
+                                    <small *ngIf="categoryName?.errors?.minlength" class="text-danger">*Category name must contain 2 characters at least<br></small>
+                                </div>
+                                <button class="btn btn-sm btn-primary mt-3" type="submit" [disabled]="addCategoryForm.invalid">Add</button>
                             </div>
                         </form>
                     </div>
