--- a/src/app/components/private/admin/category/category-update/category-update.component.html
+++ b/src/app/components/private/admin/category/category-update/category-update.component.html
@@ -30,11 +30,15 @@
                     </div>
 
                     <div class="card-body">
-                        <form>
+                        <form [formGroup]="updateCategoryForm" (ngSubmit)="updateCategory()">
                             <div class="form-group">
                                 <label for="name" id="name">Name : </label>
-                                <input type="text" class="form-control">
-                                <button class="btn btn-sm btn-warning mt-3">Update</button>
+                                <input type="text" class="form-control" formControlName="categoryName" [ngClass]="{'is-invalid' : categoryName?.touched && categoryName?.invalid, 'is-valid' : categoryName?.touched && !categoryName?.invalid}">
+                                <div *ngIf="categoryName?.touched && categoryName?.invalid">
+                                    <small *ngIf="categoryName?.errors?.required" class="text-danger">*Category name is required<br></small>
+                                    <small *ngIf="categoryName?.errors?.minlength" class="text-danger">*Category name must contain 2 characters at least<br></small>
+                                </div>
+                                <button class="btn btn-sm btn-warning mt-3" [disabled]="updateCategoryForm.invalid">Update</button>
                             </div>
                         </form>
                     </div>
