--- a/src/app/components/private/admin/product/product-add/product-add.component.html
+++ b/src/app/components/private/admin/product/product-add/product-add.component.html
@@ -30,33 +30,50 @@
                     </div>
 
                     <div class="card-body">
-                        <form>
+                        <form [formGroup]="addProductForm" (ngSubmit)="addProduct()">
                             <div class="form-group">
                                 <label for="name" id="name">Name : </label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" formControlName="name" [ngClass]="{'is-invalid' : name?.touched && name?.invalid, 'is-valid' : name?.touched && !name?.invalid}">
+                                <div *ngIf="name?.touched && name?.invalid">
+                                    <small *ngIf="name?.errors?.required" class="text-danger">*Name is required<br></small>
+                                    <small *ngIf="name?.errors?.minlength" class="text-danger">*Name must be atleast 2 characters<br></small>
+                                </div>
                             </div>
                             <div>
                                 <div class="form-group">
                                     <label for="description" id="desc">Description : </label>
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" formControlName="description" [ngClass]="{'is-invalid' : description?.touched && description?.invalid, 'is-valid' : description?.touched && !description?.invalid}">
+                                    <div *ngIf="description?.touched && description?.invalid">
+                                        <small *ngIf="description?.errors?.required" class="text-danger">*Description is required<br></small>
+                                        <small *ngIf="description?.errors?.minlength" class="text-danger">*Description must be atleast 2 characters<br></small>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="price" id="price">Price : </label>
-                                    <input type="number" class="form-control">
+                                    <input type="text" class="form-control" formControlName="price" [ngClass]="{'is-invalid' : price?.touched && price?.invalid, 'is-valid' : price?.touched && !price?.invalid}">
+                                    <div *ngIf="price?.touched && price?.invalid">
+                                        <small *ngIf="price?.errors?.required" class="text-danger">*Price is required<br></small>
+                                        <small *ngIf="price?.errors?.pattern" class="text-danger">*Invalid price, price must be a number<br></small>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="photo" id="name">Image : </label>
-                                    <input type="file" class="form-control-file">
+                                    <input type="file" class="form-control-file" formControlName="image" [ngClass]="{'is-invalid' : image?.touched && image?.invalid, 'is-valid' : image?.touched && !image?.invalid}">
+                                    <div *ngIf="image?.touched && image?.invalid">
+                                        <small *ngIf="image?.errors?.required" class="text-danger">*Image is required<br></small>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="category" id="price">Category : </label>
-                                    <select class="custom-select">
+                                    <select class="custom-select" formControlName="category" [ngClass]="{'is-invalid' : category?.touched && category?.invalid, 'is-valid' : category?.touched && !category?.invalid}">
                                       <option selected>Choose category</option>
                                       <option>Smartphones</option>
                                       <option>Laptops</option>
                                     </select>
+                                    <div *ngIf="category?.touched && category?.invalid">
+                                        <small *ngIf="category?.errors?.required" class="text-danger">*Category is required<br></small> </div>
                                 </div>
-                                <button class="btn btn-sm btn-primary mt-3">Add</button>
+                                <button class="btn btn-sm btn-primary mt-3" [disabled]="addProductForm.invalid">Add</button>
                             </div>
                         </form>
 
