--- a/src/app/components/private/admin/product/product-list/product-list.component.html
+++ b/src/app/components/private/admin/product/product-list/product-list.component.html
@@ -46,37 +46,21 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td class="align-middle">1</td>
+                                <tr *ngFor="let product of products">
+                                    <td class="align-middle">{{product.id}}</td>
                                     <td><img src="http://placehold.it/700x400" width="150" height="100">
                                     </td>
-                                    <td class="align-middle">iPhone</td>
-                                    <td class="align-middle">Lorem ipsum dolor</td>
-                                    <td class="align-middle">$900</td>
-                                    <td class="align-middle">Smartphones</td>
+                                    <td class="align-middle">{{product.name}}</td>
+                                    <td class="align-middle">{{product.description}}</td>
+                                    <td class="align-middle">{{product.price}}</td>
+                                    <td class="align-middle">{{product.category?.name}}</td>
                                     <td class="align-middle">
-                                        <a routerLink="/admin/product/update" class="btn btn-sm btn-warning">
+                                        <a [routerLink]="['/admin/product/update', product.id]" class="btn btn-sm btn-warning">
                                             <i class="fas fa-edit"></i>
                                         </a>
-                                        <button class="btn btn-sm btn-danger">
-                                  <i class="fas fa-trash-alt"></i>
-                              </button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="align-middle">2</td>
-                                    <td><img src="http://placehold.it/700x400" width="150" height="100"> </td>
-                                    <td class="align-middle">Macbook</td>
-                                    <td class="align-middle">Lorem ipsum dolor</td>
-                                    <td class="align-middle">$1500</td>
-                                    <td class="align-middle">Laptops</td>
-                                    <td class="align-middle">
-                                        <a routerLink="/admin/product/update" class="btn btn-sm btn-warning">
-                                            <i class="fas fa-edit"></i>
-                                        </a>
-                                        <button class="btn btn-sm btn-danger">
-                                  <i class="fas fa-trash-alt"></i>
-                              </button>
+                                        <button class="btn btn-sm btn-danger" (click)="deleteProduct(product)">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </button>
                                     </td>
                                 </tr>
                             </tbody>
