--- a/src/app/components/private/shared/sidebar/sidebar.component.html
+++ b/src/app/components/private/shared/sidebar/sidebar.component.html
@@ -23,22 +23,22 @@
     <hr class="sidebar-divider">
     <!-- Admin items -->
 
-    <li class="nav-item">
+    <li *ngIf="isAdmin" class="nav-item">
         <a class="nav-link" routerLink="/admin/category/list">
             <i class="fab fa-elementor"></i>
             <span>Categories Management</span></a>
     </li>
-    <li class="nav-item">
+    <li *ngIf="isAdmin" class="nav-item">
         <a class="nav-link" routerLink="/admin/product/list">
             <i class="fab fa-product-hunt"></i>
             <span>Products Management</span></a>
     </li>
-    <li class="nav-item">
+    <li *ngIf="isAdmin" class="nav-item">
         <a class="nav-link" routerLink="/admin/client/list">
             <i class="fas fa-fw fa-users"></i>
             <span>Clients Management</span></a>
     </li>
-    <li class="nav-item">
+    <li *ngIf="isAdmin" class="nav-item">
         <a class="nav-link" routerLink="/admin/order/list">
             <i class="fas fa-fw fa-tasks"></i>
             <span>Orders Management</span></a>
@@ -47,7 +47,7 @@
 
     <!-- Clients items -->
 
-    <li class="nav-item">
+    <li *ngIf="isClient" class="nav-item">
         <a class="nav-link" routerLink="/client/order/list">
             <i class="fas fa-fw fa-tasks"></i>
             <span>My orders</span></a>
