--- a/src/app/components/private/admin/category/categories-list/categories-list.component.html
+++ b/src/app/components/private/admin/category/categories-list/categories-list.component.html
@@ -30,6 +30,7 @@
                 <div class="card shadow mb-4">
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                         <h6 class="m-0 font-weight-bold text-primary">Categories List</h6>
+                        <input type="text" placeholder="Search ..." [(ngModel)]="name" (input)="filterByName(name)">
                     </div>
 
                     <div class="card-body">
